[gd_scene load_steps=3 format=3 uid="uid://bg3cx0q8woigf"]

[ext_resource type="Script" path="res://tests/test_spawn.gd" id="1_ulalc"]
[ext_resource type="PackedScene" uid="uid://im3anugna8hl" path="res://spawn/spawn.tscn" id="2_kon6o"]

[node name="TestSpawn" type="Node2D"]
script = ExtResource("1_ulalc")

[node name="Spawn" parent="." instance=ExtResource("2_kon6o")]
position = Vector2(333, 340)

[node name="Button" type="Button" parent="."]
offset_left = 868.0
offset_top = 191.0
offset_right = 962.0
offset_bottom = 222.0
text = "Spawn Left"

[node name="Spawn2" parent="." instance=ExtResource("2_kon6o")]
position = Vector2(625, 340)

[node name="Button2" type="Button" parent="."]
offset_left = 999.0
offset_top = 193.0
offset_right = 1103.0
offset_bottom = 224.0
text = "Spawn Right"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
